# mcstatus

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  package-lock.json  package.json
.github/workflows/: docker.yml
src/: config.rs  errors.rs  main.rs  ping.rs  templates.rs
src/templates/: errors.rs  index.rs  mod.rs  server.rs
templates/: a.html  index.html  server-error.html  server.html
