[package]
name = "mcstatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
elytra-ping = "5.0.0"
env_logger = "0.11.3"
figment = { version = "0.10.15", features = ["json", "yaml", "toml", "env"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
trust-dns-resolver = "0.23.2"

[build-dependencies]
npm_rs = "1.0.0"
